--- a/Java - Spring/Api-Spring-MongoDB/pom.xml
+++ b/Java - Spring/Api-Spring-MongoDB/pom.xml
@@ -35,6 +35,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
