--- a/Java - Spring/Api-Spring-MongoDB/pom.xml
+++ b/Java - Spring/Api-Spring-MongoDB/pom.xml
@@ -82,6 +82,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>    
+					<mainClass>com.estudos.workshopmongo.ApiSpringMongoDbApplication</mainClass>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
